Add more vocabs to vocabs.ini

--- a/Vocab3000/res/vocabs.ini
+++ b/Vocab3000/res/vocabs.ini
@@ -88,3 +88,29 @@ accrues=fällt an
 inclined=geneigt
 payroll=Lohn-und Gehaltsabrechnung
 facilities=Anlagen
+mulling=Nachdenken
+gamut=Skala
+skim=überfliegen
+deterred=abgeschreckt
+heuristic=heuristisch
+scarcely=kaum
+wad=Bündel
+gleaned=aufgesucht
+pungencies=Schärfe
+divergent=abweichend
+surgery=Chirurgie
+envy=Neid
+whiff=Hauch
+indistinguishable=nicht zu unterscheiden
+reluctant=ungern
+dignity=Würde
+diary=Tagebuch
+inappropriate=unangemssen
+commonality=Gemeinsamkeiten
+atone=büßen
+touted=angepriesen
+omniscient=allwissend
+bequest=Vermächtnis
+fiddle=fummeln
+gut=Darm
+superfluous=überflüssig
