Add more vocabs to vocab.ini

--- a/Vocab3000/res/vocabs.ini
+++ b/Vocab3000/res/vocabs.ini
@@ -1,6 +1,7 @@
 [EN-DE]
 introductory=einleitend
 comprehensible=verständlich
+comprehensive=umfassend
 worthwhile=lohnend
 frankly=aufrichtig
 compliant=konform
@@ -114,3 +115,16 @@ bequest=Vermächtnis
 fiddle=fummeln
 gut=Darm
 superfluous=überflüssig
+concise=prägnant
+convey=vermitteln
+terse=knapp
+thus=somit
+laughably=lächerlich
+enlist=gewinnen
+dangling=baumeln
+superior=besser
+confident=zuversichtilich
+boiling=Sieden
+occasionally=gelegentlich
+concurrent=gleichzeitig
+conscious=bewusst
