Add more vocabs

--- a/Vocab3000/res/vocabs.ini
+++ b/Vocab3000/res/vocabs.ini
@@ -128,3 +128,19 @@ boiling=Sieden
 occasionally=gelegentlich
 concurrent=gleichzeitig
 conscious=bewusst
+despair=Verzweiflung
+curious=neugierig
+tertiary=teritär
+rampant=zügellos
+substitute=Ersatz
+tractable=handhabbar
+crisp=knackig
+assess=beurteilen
+repetitive=wiederholend
+bevy=Schar
+streaking=Sreifen
+decorously=geziemend
+ramifications=Auswirkungen
+simplistic=simpel
+compelling=zwingend
+scaffolding=Gerüst
