Add better result output and fix typos in vocabs

--- a/Vocab3000/res/vocabs.ini
+++ b/Vocab3000/res/vocabs.ini
@@ -22,7 +22,7 @@ opposing=entgegengesetzt
 feasable=möglich
 sophisticated=anspruchsvoll
 thereby=damit
-purposly=absichtlicht
+purposly=absichtlich
 arranges=ordnet
 applicability=Anwendbarkeit
 participants=Teilnehmer
@@ -34,7 +34,7 @@ attain=erreichen
 emphasize=betonen
 respectively=beziehungsweise
 perhaps=vielleicht
-tamped=Versuch
+tamped=gestampft
 incurse=entgehen
 pentaly=Strafe
 compound=Zusammensetzung
